i just have to fix approved-selected later

--- a/templates/admin_issue_certificate.html
+++ b/templates/admin_issue_certificate.html
@@ -535,7 +535,7 @@
           add("Branch", c.branch);
           add("College", c.college);
           add("Domain", c.domain);
-          add("Application ID", c.application_id);
+          add("Candidate ID", c.candidate_id);
           add("Approved Date", formatDate(c.approved_date));
 
           const html = `<div style="width:100%"><div style="overflow:auto"><table style="width:100%;border-collapse:collapse">${rows.join(
