--- a/templates/admin_selected.html
+++ b/templates/admin_selected.html
@@ -506,8 +506,7 @@
           add("Branch", c.branch);
           add("College", c.college);
           add("Domain", c.domain);
-          add("Application ID", c.application_id);
-          add("User ID", c.user_id);
+          add("Candidate ID", c.candidate_id);
           add("Approved Date", formatDate(c.approved_date));
           add("Completion Date", formatDate(c.completion_date));
 
